packages/errors/test/__snapshots__/CLOUD_PROTOCOL_UPLOAD_UNKNOWN_ERROR.ansi
[31mWarning: We encountered an error while uploading the Test Replay recording of this spec.[39m
[31m[39m
[31mThese results will not display Test Replay recordings.[39m
[31m[39m
[31mThis error will not affect or change the exit code.[39m
[31m[39m
[31m[95mError: fail whale[39m[31m[39m
[31m[39m